# src/lib/generated-api/models/UserResponse.ts
@@ -3,26 +3,26 @@
 /* tslint:disable */
 /* eslint-disable */
 export type UserResponse = {
-    id?: string;
-    supabaseId?: string;
-    name?: string;
-    email?: string;
-    phoneNumber?: string;
-    address?: string;
-    bio?: string;
-    avatarUrl?: string;
-    preferredLanguage?: UserResponse.preferredLanguage;
-    createdAt?: string;
-    updatedAt?: string;
-    isEmailVerified?: boolean;
-    isPhoneVerified?: boolean;
-    active?: boolean;
+  id: string;
+  supabaseId: string;
+  name: string;
+  email: string;
+  contactOptions: Array<"EMAIL" | "PHONE" | "WHATSAPP">;
+  phoneNumber?: string;
+  address?: string;
+  bio?: string;
+  avatarUrl?: string;
+  preferredLanguage?: UserResponse.preferredLanguage;
+  createdAt: string;
+  updatedAt?: string;
+  isEmailVerified?: boolean;
+  isPhoneVerified?: boolean;
+  active?: boolean;
 };
 export namespace UserResponse {
-    export enum preferredLanguage {
-        ENGLISH = 'ENGLISH',
-        FRENCH = 'FRENCH',
-        GERMAN = 'GERMAN',
-    }
+  export enum preferredLanguage {
+    ENGLISH = "ENGLISH",
+    FRENCH = "FRENCH",
+    GERMAN = "GERMAN",
+  }
 }
-
